# Neo4j-MiniHack

./: .env.example  .gitignore  .mcp.json  CLAUDE.md  README.md  pyproject.toml  skills-lock.json  slides.html
.claude/: settings.json
.claude/commands/: add-folder.md
connector/: context_engine.py  embed_kg.py  ingest_repo.py  mcp_server.py  requirements.txt  reset.cypher  schema.cypher
save-my-tokens/: DEMO.md  seed_memory.md  server.py  setup.py
save-my-tokens/measure/: token_compare.py
save_my_tokens/: DEMO.md  PROTOCOL.md  __init__.py  auto_memory.py  embed.py  engine.py  ingest.py
