[project]
name = "save-my-tokens"
version = "0.1.0"
description = "Persistent memory for coding agents — built on Neo4j Aura"
requires-python = ">=3.10"
dependencies = [
    "neo4j",
    "openai",
    "tiktoken",
    "python-dotenv",
    "requests",
    "mcp>=1.0.0",
]

[project.scripts]
save-my-tokens = "save_my_tokens.server:main"

[tool.setuptools.packages.find]
include = ["save_my_tokens*"]
